# webapi/src/main/scala/de/tudo/sse/classfilefeatures/webapi/core/RequestHandler.scala
@@ -2,7 +2,7 @@ package de.tudo.sse.classfilefeatures.webapi.core
 
 import de.tudo.sse.classfilefeatures.webapi.WebapiConfig
 import de.tudo.sse.classfilefeatures.webapi.model.requests.ExecuteAnalysisRequest
-import de.tudo.sse.classfilefeatures.webapi.model.{AnalysisInformationRepr, AnalysisResultRepr, AnalysisRunRepr, EntityRepr, genericEntityToEntityRepr, toAnalysisRepr, toEntityRepr, toResultRepr, toRunRepr}
+import de.tudo.sse.classfilefeatures.webapi.model.{AnalysisInformationRepr, AnalysisResultFormatRepr, AnalysisResultRepr, AnalysisRunRepr, EntityRepr, genericEntityToEntityRepr, toAnalysisFormatRepr, toAnalysisRepr, toEntityRepr, toResultRepr, toRunRepr}
 import de.tudo.sse.spareuse.core.utils.rabbitmq.MqMessageWriter
 import de.tudo.sse.spareuse.core.model.{RunState, SoftwareEntityKind}
 import de.tudo.sse.spareuse.core.model.SoftwareEntityKind.SoftwareEntityKind
@@ -36,6 +36,12 @@ class RequestHandler(val configuration: WebapiConfig, dataAccessor: DataAccessor
     dataAccessor
       .getAnalyses(includeRuns = true, skip, limit)
       .map(allAnalyses => allAnalyses.map(toAnalysisRepr))
+  }
+
+  def getAnalysisResultFormat(analysisName: String, analysisVersion: String): Try[AnalysisResultFormatRepr] = {
+    dataAccessor
+      .getAnalysisData(analysisName, analysisVersion)
+      .map(toAnalysisFormatRepr)
   }
 
   def hasAnalysis(analysisName: String, version: Option[String] = None): Boolean = {
