# webapi/src/main/scala/de/tudo/sse/classfilefeatures/webapi/model/AnalysisResultFormatRepr.scala
@@ -1,0 +1,10 @@
+package de.tudo.sse.classfilefeatures.webapi.model
+
+import akka.http.scaladsl.marshallers.sprayjson.SprayJsonSupport
+import spray.json.{DefaultJsonProtocol, JsonFormat}
+
+case class AnalysisResultFormatRepr(Description: String, FormatDefinition: String)
+
+trait AnalysisResultFormatReprJsonSupport extends SprayJsonSupport with DefaultJsonProtocol {
+  implicit def analysisResultFormatReprFormat: JsonFormat[AnalysisResultFormatRepr] = jsonFormat2(AnalysisResultFormatRepr)
+}
